<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/log_iwuse"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/usercenter_head" />

	<View android:layout_width="wrap_content" />

    <EditText
        android:id="@+id/edt_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="11"
        android:hint="@string/userid"
        android:inputType="phone" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:ems="11"
        android:hint="@string/passward"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/abc_btn_check_to_on_mtrl_015" />
    
	<LinearLayout 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
	 <TextView
        android:id="@+id/txt_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist"
         />
	    
    <TextView
        android:id="@+id/txt_forgetuserinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetuserinfo"
        android:layout_marginLeft="10dp"
        />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="bottom"
	    android:orientation="horizontal"
	    android:layout_marginTop="50dp" >

	    <Button
	        android:id="@+id/btn_oauth_weichat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/oauth_weichat" />

	    <Button
	        android:id="@+id/btn_oauth_qq"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/oauth_qq" />

	    <Button
	        android:id="@+id/btn_oauth_paybao"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/oauth_paybao" />

	    <Button
	        android:id="@+id/btn_oauth_weibo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/oauth_weibo" />
	</LinearLayout>

</LinearLayout>