<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:background="@color/bg_color_deep"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical" >
		    <ImageView
		        android:id="@+id/tv_close"
		        android:layout_width="20dp"
		        android:layout_height="20dp"
		        android:layout_gravity="right"
		        android:layout_marginTop="5dp"
		        android:layout_marginRight="10dp"
		        android:src="@drawable/close_button" />
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:gravity="center"
		        android:text="@string/product_search"
		        android:textSize="19sp"
		        android:textColor="@color/black" />
		    
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="vertical" >
		        <LinearLayout
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal" >
		            <TextView
		                android:id="@+id/tv_kitchen"
		                android:layout_width="0dp"
			        	android:layout_height="wrap_content"
			        	android:layout_weight="1"
			        	android:gravity="center"
			        	android:text="@string/kitchen"
			        	android:textColor="@drawable/product_select" />
		            <TextView
		                android:id="@+id/tv_bathroom"
		                android:layout_width="0dp"
			        	android:layout_height="wrap_content"
			        	android:layout_weight="1"
			        	android:gravity="center"
			        	android:text="@string/bathroom"
			        	android:textColor="@drawable/product_select" />
		            <TextView
		                android:id="@+id/tv_bedroom"
		                android:layout_width="0dp"
			        	android:layout_height="wrap_content"
			        	android:layout_weight="1"
			        	android:gravity="center"
			        	android:text="@string/bedroom"
			        	android:textColor="@drawable/product_select" />
		        </LinearLayout>
		        <LinearLayout
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:orientation="horizontal" >
		            <TextView
		                android:id="@+id/tv_hall"
		                android:layout_width="0dp"
			        	android:layout_height="wrap_content"
			        	android:layout_weight="1"
			        	android:gravity="center"
			        	android:text="@string/hall"
			        	android:textColor="@drawable/product_select" />
		            <TextView
		                android:id="@+id/tv_outdoor"
		                android:layout_width="0dp"
			        	android:layout_height="wrap_content"
			        	android:layout_weight="1"
			        	android:gravity="center"
			        	android:text="@string/outdoor"
			        	android:textColor="@drawable/product_select" />
		            <TextView
		                android:id="@+id/tv_accessories"
		                android:layout_width="0dp"
			        	android:layout_height="wrap_content"
			        	android:layout_weight="1"
			        	android:gravity="center"
			        	android:text="@string/accessories"
			        	android:textColor="@drawable/product_select" />
		        </LinearLayout>
		    </LinearLayout>
		
		    <View
		        android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_marginTop="20dp"
			    android:layout_marginBottom="20dp"
			    android:background="@color/black" />
		    
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		        <LinearLayout
		            android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:gravity="center_horizontal"
			        android:orientation="vertical" >
		            <TextView
		                android:id="@+id/tv_usa_city"
		                android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_marginBottom="10dp"
			        	android:gravity="center"
			        	android:text="@string/usa_city"
			        	android:textColor="@drawable/product_select" />
		            <TextView
		                android:id="@+id/tv_jap_elegant"
		                android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_marginBottom="10dp"
			        	android:gravity="center"
			        	android:text="@string/jap_elegant"
			        	android:textColor="@drawable/product_select" />
		            <TextView
		                android:id="@+id/tv_ornate_palace"
		                android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_marginBottom="10dp"
			        	android:gravity="center"
			        	android:text="@string/ornate_palace"
			        	android:textColor="@drawable/product_select" />
		        </LinearLayout>
		        <LinearLayout
		            android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:gravity="center_horizontal"
			        android:orientation="vertical" >
		            <TextView
		                android:id="@+id/tv_nordic_simply"
		                android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_marginBottom="10dp"
			        	android:gravity="center"
			        	android:text="@string/nordic_simply"
			        	android:textColor="@drawable/product_select" />
		            <TextView
		                android:id="@+id/tv_asia_holiday"
		                android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_marginBottom="10dp"
			        	android:gravity="center"
			        	android:text="@string/asia_holiday"
			        	android:textColor="@drawable/product_select" />
		            <TextView
		                android:id="@+id/tv_modern_luxury"
		                android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_marginBottom="10dp"
			        	android:gravity="center"
			        	android:text="@string/modern_luxury"
			        	android:textColor="@drawable/product_select" />
		        </LinearLayout>
		    </LinearLayout>
		    
		    <View
		        android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_marginTop="20dp"
			    android:layout_marginBottom="20dp"
			    android:background="@color/black" />
		    
		    <com.yizi.iwuse.product.view.NoScrollGridView
		        android:id="@+id/gv_select"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:layout_gravity="center_horizontal"
		        android:padding="5dp"
		        android:gravity="center"
		        android:background="@android:color/transparent"
		        android:numColumns="3"
		        android:stretchMode="columnWidth"
		        android:verticalSpacing="10dp" >
		    </com.yizi.iwuse.product.view.NoScrollGridView>
	    </LinearLayout>
    </ScrollView>
</LinearLayout>