<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frg_usercenter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <ImageView
                android:id="@+id/img_usercenter_headimg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/head_default" />

            <TextView
                android:id="@+id/txt_usercenter_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/img_usercenter_headimg"
                android:text="@string/usercenter_username"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_usercenter_totalintegral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txt_usercenter_username"
                android:layout_below="@+id/img_usercenter_headimg"
                android:textColor="@color/text_color"
                android:text="@string/usercenter_totalintegral"
                android:textSize="12sp" />
        </RelativeLayout>
		<TableLayout 
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content"
		    android:padding="10dp"
		    >
		   <TableRow >
		      <ImageView 
		        android:id="@+id/img_usercenter_icollection"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/head_default"/>
		       <ImageView 
		        android:id="@+id/img_usercenter_ishopcart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/head_default"/>
		       <ImageView 
		        android:id="@+id/img_usercenter_iwallet"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/head_default"/>
		   </TableRow>
		   <TableRow >
		       <TextView android:id="@+id/txt_usercenter_icollection" 
		          		android:layout_width="30dp"
                		android:layout_height="30dp"
                		android:layout_marginRight="5dp"
                		android:text="@string/usercenter_icollection"/>
		       <TextView android:id="@+id/txt_usercenter_ishopcart" 
		          		android:layout_width="30dp"
                		android:layout_height="30dp"
                		android:layout_marginRight="5dp"
                		android:text="@string/usercenter_ishopcart"/>
		       <TextView android:id="@+id/txt_usercenter_iwallet" 
		          		android:layout_width="30dp"
                		android:layout_height="30dp"
                		android:layout_marginRight="5dp"
                		android:text="@string/usercenter_iwallet"/>
		   </TableRow>
		</TableLayout>
        
        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/widget_linedeliver" >
        </include>

        <TextView
            android:id="@+id/txt_usercenter_iorderlist"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:text="@string/usercenter_iorderlist" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/widget_linedeliver" >
        </include>

        <TextView
            android:id="@+id/txt_usercenter_callservice"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:text="@string/usercenter_callservice" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/widget_linedeliver" >
        </include>

        <TextView
            android:id="@+id/txt_usercenter_isubmission"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:text="@string/usercenter_isubmission" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/widget_linedeliver" >
        </include>

        <TextView
            android:id="@+id/txt_usercenter_setting"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:text="@string/usercenter_setting" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/widget_linedeliver" >
        </include>

        <TextView
            android:id="@+id/txt_usercenter_about"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:text="@string/usercenter_about" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/widget_linedeliver" >
        </include>

    </LinearLayout>
    
    

</ScrollView>
